--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ nav li,a {
 .cart{
     position: relative;
     padding: 0.4em;
+    font-size: clamp(0.5rem,0.8vw,0.8rem);
 }
 
 .cart img{
@@ -125,7 +126,7 @@ nav li,a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 3em 0;
+    margin: 4em 0;
     padding: 1em 0;
     /* border: 1px solid white; */
 }
@@ -147,7 +148,7 @@ nav li,a {
     /* font-size: 1.2rem; */
     /* font-size: 1.5vw; */
     font-size: clamp(0.9rem, 1.5vw, 1.2rem);
-    margin-bottom: 1em;
+    margin-bottom: 0.6em;
 }
 
 .welcome-block-content h1 {
@@ -165,12 +166,16 @@ nav li,a {
     background-color: rgb(123, 164, 53);
     color: white;
     margin: 0.5em 0;
-    padding: 0.6em 1.5em;
+    padding: 0.4em 0.6em;
     /* font-size: 1.4rem; */
     /* font-size: 1.4vw; */
     font-size: clamp(1rem, 1.4vw, 1.4rem);
     font-weight: 700;
-    border-radius: 0.3em;
+    border-radius: 0.5em;
+}
+
+.play-now a{
+    font-size: clamp(1rem, 1.4vw, 1.4rem);
 }
 
 .live {
@@ -419,32 +424,36 @@ nav li,a {
 .newsletter {
     background-color: rgb(123, 164, 53);
     border-radius: 6px;
-    display: flex;
-    flex-flow: wrap;
+    /* display: flex;
     align-items: center;
-    padding: 1em;
+    justify-content: space-between; */
+    display: flex;
+    flex-direction: column;
+    padding: 0.5em;
     margin: 5% 0;
 }
 
 .newsletter-text {
     color: white;
     padding: 1em;
-    /* width: 50%; */
+    /* width: 40%; */
     margin: 0 auto;
     /* font-size: 0.4rem; */
     font-size: clamp(0.4rem, 1vw, 1.2rem);
+    text-align: center;
 }
 
 .newsletter-input {
-    /* width: 30%; */
+    /* width: 50%; */
     width: fit-content;
     margin: auto;
     border: 1px solid wheat;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: white;
     padding: 0.2em;
+
     border-radius: 6px;
 }
 
@@ -461,7 +470,7 @@ nav li,a {
 }
 
 .newsletter-input button {
-    width: 40%;
+    width: fit-content;
     /* font-size: 1.2rem; */
     /* font-size: 0.6rem; */
     font-size: clamp(0.6rem, 1.2vw, 1.2rem);
@@ -482,6 +491,13 @@ footer {
     font-size: clamp(0.6rem, 1.2vw, 1.2rem);
 }
 
+footer h2,h3{
+    padding-bottom: 1.5em;
+}
+
+footer .about p{
+    line-height: 1.5em;
+}
 
 footer .about img {
     padding-right: 0.3em;
@@ -685,6 +701,18 @@ footer .todays-winners div {
 @media (min-width: 768px) {
     .all-cards {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .newsletter{
+        flex-direction: row;
+        align-items: center;
+    }
+    .newsletter-text{
+        text-align: left;
+        width: 40%;
+    }
+    .newsletter-input{
+        width: 50%;
     }
 }
 
